--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -13,8 +12,10 @@
   <!-- Put Python code inside the the <py-script> tag -->
     <py-script>display("Hello World!")</py-script>
 
-<py-script>
-import platform
+<py-script src="https://github.com/svenugopal026/pycode.git/con1.py"></py-script> 
+<py-repl></py-repl>  
+
+<py-script>import platform
 
 my_system = platform.uname()
 
