--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,5 +1,143 @@
 <html>
-  <head>
-Welcome
-    </head>
+
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Language" content="en-us">
+<title>Welcome to my Web site</title>
+<!--mstheme--><link rel="stylesheet" type="text/css" href="_themes/sky/sky1011.css"><meta name="Microsoft Theme" content="sky 1011, default">
+</head>
+
+<body>
+
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+	<tr>
+		<td width="150" colspan="2" align="center">&nbsp;</td>
+		<td align="center">
+		<!--webbot bot="Navigation" s-type="banner" s-rendering="graphics" s-orientation b-include-home b-include-up u-page s-target startspan --><img src="_derived/index.htm_cmp_sky010_bnr.gif" width="708" height="134" border="0" alt="Welcome to my Web site"><!--webbot bot="Navigation" i-checksum="61249" endspan --></td>
+	</tr>
+	<tr>
+		<td width="100%" colspan="3" style="border-bottom-style: none; border-bottom-width: medium">
+		</td>
+	</tr>
+</table>
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+	<tr>
+		<td style="border-bottom-style: solid; border-bottom-width: 1" align="right">
+		<h4>
+		<!--webbot bot="Timestamp" s-type="REGENERATED" s-format="%m/%d/%y" startspan -->04/15/21<!--webbot bot="Timestamp" i-checksum="12556" endspan -->
+		</h4>
+		</td>
+	</tr>
+</table>
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+	<tr>
+		<td valign="top" width="75" style="border-left-style:none; border-left-width:medium; border-right-style:solid; border-right-width:1; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium">
+		<!--webbot bot="Navigation" s-orientation="vertical" s-rendering="graphics" s-type="children" b-include-home="TRUE" b-include-up="FALSE" startspan --><script language="JavaScript"><!--
+MSFPhover = 
+  (((navigator.appName == "Netscape") && 
+  (parseInt(navigator.appVersion) >= 3 )) || 
+  ((navigator.appName == "Microsoft Internet Explorer") && 
+  (parseInt(navigator.appVersion) >= 4 ))); 
+function MSFPpreload(img) 
+{
+  var a=new Image(); a.src=img; return a; 
+}
+// --></script><script language="JavaScript"><!--
+if(MSFPhover) { MSFPnav1n=MSFPpreload("_derived/home_cmp_sky010_vbtn_p.gif"); MSFPnav1h=MSFPpreload("_derived/home_cmp_sky010_vbtn_a.gif"); }
+// --></script><a href="index.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav1'].src=MSFPnav1h.src" onmouseout="if(MSFPhover) document['MSFPnav1'].src=MSFPnav1n.src"><img src="_derived/home_cmp_sky010_vbtn_p.gif" width="141" height="20" border="0" alt="Home" name="MSFPnav1"></a><br><script language="JavaScript"><!--
+if(MSFPhover) { MSFPnav2n=MSFPpreload("_derived/aboutme.htm_cmp_sky010_vbtn.gif"); MSFPnav2h=MSFPpreload("_derived/aboutme.htm_cmp_sky010_vbtn_a.gif"); }
+// --></script><a href="aboutme.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav2'].src=MSFPnav2h.src" onmouseout="if(MSFPhover) document['MSFPnav2'].src=MSFPnav2n.src"><img src="_derived/aboutme.htm_cmp_sky010_vbtn.gif" width="141" height="20" border="0" alt="About Me" name="MSFPnav2"></a><br><script language="JavaScript"><!--
+if(MSFPhover) { MSFPnav3n=MSFPpreload("_derived/interest.htm_cmp_sky010_vbtn.gif"); MSFPnav3h=MSFPpreload("_derived/interest.htm_cmp_sky010_vbtn_a.gif"); }
+// --></script><a href="interest.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav3'].src=MSFPnav3h.src" onmouseout="if(MSFPhover) document['MSFPnav3'].src=MSFPnav3n.src"><img src="_derived/interest.htm_cmp_sky010_vbtn.gif" width="141" height="20" border="0" alt="Interests" name="MSFPnav3"></a><br><script language="JavaScript"><!--
+if(MSFPhover) { MSFPnav4n=MSFPpreload("_derived/favorite.htm_cmp_sky010_vbtn.gif"); MSFPnav4h=MSFPpreload("_derived/favorite.htm_cmp_sky010_vbtn_a.gif"); }
+// --></script><a href="favorite.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav4'].src=MSFPnav4h.src" onmouseout="if(MSFPhover) document['MSFPnav4'].src=MSFPnav4n.src"><img src="_derived/favorite.htm_cmp_sky010_vbtn.gif" width="141" height="20" border="0" alt="Favorites" name="MSFPnav4"></a><br><script language="JavaScript"><!--
+if(MSFPhover) { MSFPnav5n=MSFPpreload("_derived/photo.htm_cmp_sky010_vbtn.gif"); MSFPnav5h=MSFPpreload("_derived/photo.htm_cmp_sky010_vbtn_a.gif"); }
+// --></script><a href="photo.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav5'].src=MSFPnav5h.src" onmouseout="if(MSFPhover) document['MSFPnav5'].src=MSFPnav5n.src"><img src="_derived/photo.htm_cmp_sky010_vbtn.gif" width="141" height="20" border="0" alt="Photo Gallery" name="MSFPnav5"></a><br><script language="JavaScript"><!--
+if(MSFPhover) { MSFPnav6n=MSFPpreload("_derived/feedback.htm_cmp_sky010_vbtn.gif"); MSFPnav6h=MSFPpreload("_derived/feedback.htm_cmp_sky010_vbtn_a.gif"); }
+// --></script><a href="feedback.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav6'].src=MSFPnav6h.src" onmouseout="if(MSFPhover) document['MSFPnav6'].src=MSFPnav6n.src"><img src="_derived/feedback.htm_cmp_sky010_vbtn.gif" width="141" height="20" border="0" alt="Feedback" name="MSFPnav6"></a><!--webbot bot="Navigation" i-checksum="55859" endspan -->
+		<p>&nbsp;</p>
+		</td>
+		<td valign="top" width="5" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium">
+		</td>
+		<td valign="top" width="100%" height="100%" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium">
+		<h3>Welcome to my Web site!</h3>
+		<p align="left">The home page is a good spot to let visitors know the purpose 
+		of this Web site. The home page gives visitors an impression of your site's 
+		style. </p>
+		<center>
+		<table border="0" width="100%" cellspacing="0" cellpadding="5" height="325">
+			<tr>
+				<td width="50%" align="left" valign="top" style="border-left-style:none; border-left-width:medium; border-right-style:none; border-right-width:medium; border-top-style:solid; border-top-width:1; border-bottom-style:none; border-bottom-width:medium" height="30">
+				<h3><a href="favorite.htm">Favorite Links</a></h3>
+				</td>
+				<td width="50%" align="left" valign="top" style="border-right-style:none; border-right-width:medium; border-top-style:solid; border-top-width:1; border-bottom-style:none; border-bottom-width:medium" height="30">
+				<h3>Weather</h3>
+				</td>
+			</tr>
+			<tr>
+				<td width="50%" align="left" valign="top" style="border-left-style:none; border-left-width:medium; border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium" height="178">
+				<!--webbot bot="PurpleText" preview="This space could be used to list frequently visited sites." -->
+				<p></p>
+				<table border="0" cellpadding="0" cellspacing="0" width="100%">
+					<tr>
+						<td valign="top" width="100%">
+						<ul>
+							<li><a href="http://www.example.com">Visit Example.com</a></li>
+							<li><a href="http://www.example.org">See Example.org</a>
+							</li>
+							<li><a href="http://www.example.net">Look at Example.net</a>
+							</li>
+						</ul>
+						</td>
+					</tr>
+				</table>
+				<p></p>
+				</td>
+				<td width="50%" align="left" valign="top" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium" height="178">
+				<!--webbot bot="PurpleText" preview="This space can be used to place some information that is useful to you (i.e.-Weather, News Headlines, etc.)" -->
+				<p>Redmond, WA - Sunny <br>
+				<br>
+				High: 85 , Low: 70 degrees</p>
+				</td>
+			</tr>
+			<tr>
+				<td width="50%" align="left" valign="top" style="border-left-style:none; border-left-width:medium; border-right-style:none; border-right-width:medium; border-top-style:solid; border-top-width:1; border-bottom-style:none; border-bottom-width:medium" height="41">
+				<h3><a href="photo.htm">Photo Album</a></h3>
+				</td>
+				<td width="50%" align="left" valign="top" style="border-right-style:none; border-right-width:medium; border-top-style:solid; border-top-width:1; border-bottom-style:none; border-bottom-width:medium" height="41">
+				<h3>Communities &amp; Forums</h3>
+				</td>
+			</tr>
+			<tr>
+				<td width="50%" align="left" valign="top" style="border-style:none; border-width:medium; " height="36">
+				<img alt="Mountains" border="0" src="images/mount.gif" align="left" width="70" height="104">Look 
+				at my new online photo album filled with pictures from my vacations, 
+				sporting events, and my family.</td>
+				<td width="50%" align="left" valign="top" style="border-right-style:none; border-right-width:medium; border-top-style:none; border-top-width:medium; border-bottom-style:none; border-bottom-width:medium" height="36">
+				<!--webbot bot="PurpleText" preview="This is a place to create links to your favorite message boards / chat rooms / community web sites." -->
+				<table border="0" cellpadding="0" cellspacing="0" width="100%">
+					<tr>
+						<td valign="top" width="100%">
+						<ul>
+							<li><a href="http://www.example.com/people">Example.com</a>
+							</li>
+						</ul>
+						</td>
+					</tr>
+				</table>
+				</td>
+			</tr>
+		</table>
+		</center></td>
+	</tr>
+</table>
+<p align="center"><small>
+<!--webbot bot="Navigation" s-orientation="horizontal" s-rendering="html" s-bar="Bars" s-btn-nml="&lt;A HREF=&quot;#URL#&quot; TARGET=&quot;#TARGET#&quot; STYLE=&quot;text-decoration: none;&quot;&gt;#LABEL#&lt;/A&gt;" s-btn-sel="#LABEL#" s-btn-sep="&amp;nbsp;|&amp;nbsp;" s-type="children" b-include-home="TRUE" b-include-up="FALSE" startspan --><nobr>Home</nobr>&nbsp;|&nbsp;<nobr><A HREF="aboutme.htm" TARGET="" STYLE="text-decoration: none;">About&nbsp;Me</A></nobr>&nbsp;|&nbsp;<nobr><A HREF="interest.htm" TARGET="" STYLE="text-decoration: none;">Interests</A></nobr>&nbsp;|&nbsp;<nobr><A HREF="favorite.htm" TARGET="" STYLE="text-decoration: none;">Favorites</A></nobr>&nbsp;|&nbsp;<nobr><A HREF="photo.htm" TARGET="" STYLE="text-decoration: none;">Photo&nbsp;Gallery</A></nobr>&nbsp;|&nbsp;<nobr><A HREF="feedback.htm" TARGET="" STYLE="text-decoration: none;">Feedback</A></nobr><!--webbot bot="Navigation" i-checksum="19988" endspan -->
+</small></p>
+<p><i><small>This site was last updated
+<!--webbot bot="Timestamp" s-type="EDITED" s-format="%m/%d/%y" startspan -->04/15/21<!--webbot bot="Timestamp" i-checksum="12556" endspan --> </small></i>
+</p>
+
+</body>
+
 </html>
